[gd_scene load_steps=3 format=3 uid="uid://by1lqbm1u8scs"]

[ext_resource type="Script" path="res://Inventory/Scripts/InventorySlot.gd" id="1_m3p8j"]
[ext_resource type="Texture2D" uid="uid://dhrp5gax8gpep" path="res://Inventory/Sprites/item_border.png" id="2_betih"]

[node name="InventorySlot" type="CenterContainer"]
anchors_preset = -1
anchor_right = 0.067
anchor_bottom = 0.119
offset_right = -0.639999
offset_bottom = -0.520004
mouse_filter = 0
script = ExtResource("1_m3p8j")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("2_betih")
texture_pressed = ExtResource("2_betih")
texture_hover = ExtResource("2_betih")
texture_disabled = ExtResource("2_betih")
texture_focused = ExtResource("2_betih")

[connection signal="gui_input" from="TextureButton" to="." method="_on_texture_button_gui_input"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
